fixing font issue again

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -2,7 +2,7 @@
   border: none;
   margin: 0;
   padding: 0;
-  font-family: "JetBrainsMono Nerd Font", "FiraCode Nerd Font", "Fira Mono", monospace;
+  font-family: "JetBrainsMono NF", "FiraCode Nerd Font", "Fira Mono", monospace;
   font-size: 16px;
   color: #f2f1ff;
 }
